--- a/package.json
+++ b/package.json
@@ -11,9 +11,7 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
-    "node-sass": "^7.0.3"
-  },
-  "dependencies": {
+    "node-sass": "^7.0.3",
     "npm-run-all": "^4.1.5"
   }
 }
